# src/Controller/Person/PersonRelationsController.php
@@ -54,7 +54,14 @@ final class PersonRelationsController extends ElementRelationsBaseController
      */
     public function getEntities(Request $request, Response $response, array $args): Response
     {
-        // @TODO
+     /**@var Person|null $person */
+     $person = $this->entityManager
+     ->getRepository(PersonQueryController::getEntityClassName())
+     ->find($args[PersonQueryController::getEntityIdName()]);
+
+     $entities = $person?->getEntities()?? [];
+
+     return $this->getElements($response, $person, EntityQueryController::getEntitiesTag(), $entities);
     }
 
     /**
@@ -70,7 +77,12 @@ final class PersonRelationsController extends ElementRelationsBaseController
      */
     public function operationEntity(Request $request, Response $response, array $args): Response
     {
-        // @TODO
+        return $this->operationRelatedElements(
+            $request,
+            $response,
+            $args,
+            EntityQueryController::getEntityClassName()
+        );
     }
 
     /**
@@ -84,7 +96,14 @@ final class PersonRelationsController extends ElementRelationsBaseController
      */
     public function getProducts(Request $request, Response $response, array $args): Response
     {
-        // @TODO
+        /** @var Person|null $person */
+        $person = $this->entityManager
+        ->getRepository(PersonQueryController::getEntityClassName())
+        ->find($args[PersonQueryController::getEntityIdName()]);
+
+        $products = $person?->getProducts()?? [];
+
+        return $this->getElements($response, $person, ProductQueryController::getEntitiesTag(), $products);
     }
 
     /**
@@ -100,6 +119,11 @@ final class PersonRelationsController extends ElementRelationsBaseController
      */
     public function operationProduct(Request $request, Response $response, array $args): Response
     {
-        // @TODO
+        return $this->operationRelatedElements(
+            $request,
+            $response,
+            $args,
+            ProductQueryController::getEntityClassName()
+        );
     }
 }
